--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.0",
+    "jsdom": "^15.1.0",
+    "nodemon": "^1.19.0",
     "socket.io": "^2.2.0"
   }
 }
