--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Simple realtime chat app build in javascript using SocketIO",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "lint": "eslint *.js"
   },
   "repository": {
     "type": "git",
@@ -19,8 +20,18 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.0",
+    "husky": "^3.0.0",
     "jsdom": "^15.1.0",
     "nodemon": "^1.19.0",
     "socket.io": "^2.2.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm test && npm run lint"
+    }
+  },
+  "devDependencies": {
+    "@types/jest": "^24.0.15",
+    "jest": "^24.8.0"
   }
 }
