--- a/package.json
+++ b/package.json
@@ -20,19 +20,11 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.0",
-    "husky": "^3.0.0",
     "jsdom": "^15.1.0",
     "nodemon": "^1.19.0",
     "socket.io": "^2.2.0"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm test && npm run lint"
-    }
-  },
   "devDependencies": {
-    "@types/jest": "^24.0.15",
-    "eslint": "^6.0.1",
-    "jest": "^24.8.0"
+    "eslint": "^6.0.1"
   }
 }
