--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "test": "jest",
-    "lint": "eslint *.js"
+    "lint": "eslint *.js",
+    "start": "node server",
+    "cypress:open": "cypress open"
   },
   "repository": {
     "type": "git",
@@ -25,6 +27,7 @@
     "socket.io": "^2.2.0"
   },
   "devDependencies": {
+    "cypress": "^3.8.3",
     "eslint": "^6.0.1"
   }
 }
